@@ -275,7 +275,7 @@ int MPI_Waitany(int count,
         }
         else if (scorep_req && ( scorep_req->flags & SCOREP_MPI_REQUEST_FLAG_IS_ACTIVE))
         {
-          SCOREP_MpiRequestTested(scorep_req->id);
+          scorep_mpi_request_tested(scorep_req);
         }
 
         scorep_mpi_unmark_request( scorep_req );
@@ -390,7 +390,7 @@ int MPI_Waitsome(int incount,
                 }
               else if ( scorep_req->flags & SCOREP_MPI_REQUEST_FLAG_IS_ACTIVE)
                 {
-                  SCOREP_MpiRequestTested(scorep_req->id);
+                  scorep_mpi_request_tested(scorep_req);
                 }
             }
           scorep_mpi_unmark_request( scorep_req );
@@ -485,7 +485,7 @@ int MPI_Test(MPI_Request* request,
     }
   else if (scorep_req && event_gen_active_for_group && xtest_active)
     {
-      SCOREP_MpiRequestTested(scorep_req->id);
+      scorep_mpi_request_tested(scorep_req);
     }
   scorep_mpi_unmark_request( scorep_req );
 
@@ -567,7 +567,7 @@ int MPI_Testany(int count,
         }
         else if (scorep_req && ( scorep_req->flags & SCOREP_MPI_REQUEST_FLAG_IS_ACTIVE ) )
         {
-          SCOREP_MpiRequestTested(scorep_req->id);
+          scorep_mpi_request_tested(scorep_req);
         }
         scorep_mpi_unmark_request( scorep_req );
       }
@@ -666,7 +666,7 @@ int MPI_Testall(int count,
           scorep_mpi_request* scorep_req = scorep_mpi_saved_request_get(i);
           if (scorep_req && ( scorep_req->flags & SCOREP_MPI_REQUEST_FLAG_IS_ACTIVE ))
           {
-            SCOREP_MpiRequestTested(scorep_req->id);
+            scorep_mpi_request_tested(scorep_req);
           }
           scorep_mpi_unmark_request( scorep_req );
         }
@@ -773,7 +773,7 @@ int MPI_Testsome(int incount,
                 }
               else if ( scorep_req->flags & SCOREP_MPI_REQUEST_FLAG_IS_ACTIVE )
                 {
-                  SCOREP_MpiRequestTested(scorep_req->id);
+                  scorep_mpi_request_tested(scorep_req);
                 }
             }
           scorep_mpi_unmark_request( scorep_req );
@@ -1203,7 +1203,7 @@ int MPI_Request_get_status(MPI_Request request,
   }
   else if (scorep_req && event_gen_active_for_group && xtest_active)
   {
-    SCOREP_MpiRequestTested(scorep_req->id);
+    scorep_mpi_request_tested(scorep_req);
   }
 
   if (event_gen_active)
